Mejoras en la estetica

--- a/registers/sign_upCONDUCTOR/index.html
+++ b/registers/sign_upCONDUCTOR/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <img src="hombre_en_auto.jpg">
-    </div>
+    <div class="triangulo-derecha"></div>
+    <div class="triangulo-izquierda"></div>
     <div class="logo">
-       <img src="Logo Open cargo - con borde.png"> 
+       <img src="isologo - con borde.png"> 
     </div>
     
     <div class="wrapper">
@@ -29,11 +28,11 @@
             </div>
             <div class="input_field">
                 <label>Contraseña</label>
-                <input type="text" class="input">
+                <input type="password" class="input">
             </div>
             <div class="input_field">
                 <label>Confirmar contraseña</label>
-                <input type="text" class="input">
+                <input type="password" class="input">
             </div>
             <div class="input_field">
                 <label>CUIL/CUIT</label>
