--- a/registers/sign_upCLIENTE/index.html
+++ b/registers/sign_upCLIENTE/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
     <div class="logo">
-        <img src="Logo Open cargo - con borde.png">
-    </div>
-    <div class="container">
-        <img src="hombre_sosteniendo_cajas.jpg">
+        <img src="isologo - con borde.png">
+    <div class="triangulo-derecha"></div>
+    <div class="triangulo-izquierda"></div>
     </div>
     <div class="wrapper">
         <div class="title">
@@ -28,11 +27,11 @@
             </div>
             <div class="input_field">
                 <label>Contraseña</label>
-                <input type="text" class="input">
+                <input type="password" class="input">
             </div>
             <div class="input_field">
                 <label>Confirmar contraseña</label>
-                <input type="text" class="input">
+                <input type="password" class="input">
             </div>
             <div class="input_field">
                 <label>CUIL/CUIT</label>
@@ -44,11 +43,15 @@
             </div>
             <div class="input_field">
                 <label>Email</label>
-                <input type="text" class="input">
+                <input type="email" class="input">
             </div>
             <div class="input_field">
                 <label>¿Particular o empresa?</label>
-                <input type="text" class="input">
+                <input type="radio" class="input" id="Particular" name="Particular-Empresa" value="Particular">
+                <label for="Particular">Particular</label>
+                <br>
+                <input type="radio" id="Empresa" name="Particular-Empresa" value="Empresa">
+                <label for="Empresa">Empresa</label>
             </div>
             <div class="input_field">
                 <label>Telefono</label>
@@ -62,7 +65,7 @@
                 <p>Acepto los terminos y condiciones</p>
             </div>
             <div class="input_field">
-                <input type="submit" value="Register" class="btn">
+                <input type="submit" value="Registrarse" class="btn">
             </div>
         </div>
     </div>
