--- a/registers/sign_upCONDUCTOR/index.html
+++ b/registers/sign_upCONDUCTOR/index.html
@@ -18,59 +18,61 @@
             Formulario de Registro para Conductor 
         </div>
         <div class="form">
+                <form>
             <div class="input_field">
                 <label>Nombre/s</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Apellido/s</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Contraseña</label>
-                <input type="password" class="input">
+                <input type="password" class="input" required>
             </div>
             <div class="input_field">
                 <label>Confirmar contraseña</label>
-                <input type="password" class="input">
+                <input type="password" class="input" required>
             </div>
             <div class="input_field">
                 <label>CUIL/CUIT</label>
-                <input type="text" class="input">
+                <input type="number" class="input" required>
             </div>
             <div class="input_field">
                 <label>Direccion</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Vehiculo(tipo)</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Email</label>
-                <input type="text" class="input">
+                <input type="email" class="input" required>
             </div>
             <div class="input_field">
                 <label>Registro de Conducir</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Seguro</label>
-                <input type="text" class="input">
+                <input type="text" class="input" required>
             </div>
             <div class="input_field">
                 <label>Telefono</label>
-                <input type="text" class="input">
+                <input type="number" class="input" required>
             </div>
             <div class="input_field" terms>
                 <label class="check">
-                    <input type="checkbox">
+                    <input type="checkbox" required>
                     <span class="checkmark"></span>
                 </label>
                 <p>Acepto los terminos y condiciones</p>
             </div>
             <div class="input_field">
                 <input type="submit" value="Register" class="btn">
+                </form>
             </div>
         </div>
     </div>
