--- a/homes_secundarias/home_CLIENTE/index.html
+++ b/homes_secundarias/home_CLIENTE/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
         <!--MENU CON LOGO-->
-        <div class="container-fluid bg-dark fixed-top">
+        <div class="container-fluid bg-dark">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark container">
                 <a class="navbar-brand" href="#">
                     <div class="d-flex align-items-start">
@@ -23,59 +23,105 @@
                 </button>
             
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="navbar-nav ml-auto">
+                    <div class="navbar-nav">
                         <a class="nav-link" href="#">INICIO</a>
                         <a class="nav-link" href="#">VIAJES</a>
                         <a class="nav-link" href="#">NOVEDADES</a>
-                        <a class="nav-link mr-4" href="#">MI CUENTA</a>
-                        <div class="pedido">
-                            <a role="button" class="btn btn-primary">SOLICITAR PEDIDO</a>
-                        </div>
+                        <a class="nav-link mr-4" href="#">MI CUENTA</a> 
                     </div>
                 </div>
             </nav>
+            <div class="pedido">
+              <a role="button" class="btn btn-primary">SOLICITAR PEDIDO</a>
+          </div>
         </div>
         <div class="titulo">
         <h1>Viajes disponibles</h1>
         </div>
         <!--TARJETAS CON INFORMACION-->
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-md-4">
-              <div class="card shadow" style="width: 18rem;">
-                <img src="plaza.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">De Resistencia a Margarita Belen</h5>
-                  <p class="card-text">Dia de viaje: 17/09/2020</p>
-                  <a href="#" class="btn btn-primary">ENTRAR</a>
-                </div>
-              </div>
+        <div class="card-columns ">
+          <div class="card bg-light shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Resistencia a Margarita Belen</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow" style="width: 18rem;">
-                <img src="plaza.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">De Resistencia a Margarita Belen</h5>
-                  <p class="card-text">Dia de viaje: 17/09/2020</p>
-                  <a href="#" class="btn btn-primary">ENTRAR</a>
-                </div>
-              </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Quitilipi a Las Palmas</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow" style="width: 18rem;">
-                <img src="plaza.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">De Resistencia a Margarita Belen</h5>
-                  <p class="card-text">Dia de viaje: 17/09/2020/p>
-                  <a href="#" class="btn btn-primary">ENTRAR</a>
-                </div>
-              </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Margarita Belen a Resistencia</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
             </div>
-
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Resistencia a Margarita Belen</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Quitilipi a Las Palmas</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Resistencia a Margarita Belen</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De Quitilipi a Las Palmas</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De EJEMPLO CIUDAD a EJEMPLO CIUDAD</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
+          </div>
+          <div class="card shadow p-3 mb-5 bg-white rounded">
+            <img class="card-img-top" src="plaza.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">De EJEMPLO CIUDAD a EJEMPLO CIUDAD</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text"><small class="text-muted">Ultima actualizacion hace 3 minutos</small></p>
+              <a href="#" class="btn btn-primary">VER MAS</a>
+            </div>
           </div>
         </div>
-
-
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
