--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenCargo</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="styles.css">
     
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
 <body>
@@ -18,28 +25,64 @@
             <section>
                 <div class="contenedor nav">
                     <div class="logo">
-                        <img src="img/logo1.png" alt="">
+                        <img src="img/logo.png" alt="">
                     </div>
+
                     <div class="enlaces-header">
-                        <a href="#">Registrarse como transporte</a>
-                        <a href="#">Registrarse como cliente</a>
-                        <a href="#">Ingresar</a>
+                        <a class="nav-modal" href="#modal">Registrarse</a>
+                        <a href="login.html">Ingresar</a>
+                        <a href="preguntas.html">Preguntas</a>
                     </div>
                 </div>
             </section>
         </nav>
+
     </header>
+
+
     <section>
         <div class="buscar">
             <input type="text" class="buscar-texto" placeholder="Buscá envíos cerca">
             <a href="" class="boton">
-            <i class="icon-buscar"></i>
+                <i class="icon-buscar"></i>
             </a>
 
         </div>
     </section>
 
-    
+    <div class="container-all" id="modal">
+
+        <div class="popup">
+            <div class="img"></div>
+            <div class="container-text">
+                <h1>Desea registrarse como:</h1>
+                <hr>
+                <div class="nav-text">
+                    <ul>
+                        <li class="nav-cl"><a href="registersclientes.html">Cliente</a></li>
+                        <li class="nav-cd"><a href="registersconductor.html">Conductor</a></li>
+                    </ul>
+
+
+                </div>
+            </div>
+
+            <a href="#" class="btn-close-popup">X</a>
+        </div>
+
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
