mensaje de confirmacion y boton

--- a/mensaje_confirmacion_email/index.html
+++ b/mensaje_confirmacion_email/index.html
@@ -12,6 +12,8 @@
         <div class="container">
           <h1 class="display-5">¡Gracias por registrarte!</h1>
           <p class="lead">En breves te enviaremos un codigo a tu direccion de correo electronico para confirmar tu cuenta.</p>
+          <a class="btn btn-secondary btn-lg" href="#" role="button">Aceptar</a>
+
         </div>
       </div>
 </body>
